--- a/contact.html
+++ b/contact.html
@@ -62,6 +62,18 @@
                     <button class="submit" type="submit">SUBMIT</button>
                 </fieldset>
             </form>
+
+            <rating-widget>
+                <form action="https://httpbin.org/post" method="POST">
+                    <label for="rating">How satisfied are you?</label>
+                    <input type="hidden" name="question" value="How satisfied are you?">
+                    <input type="hidden" name="sentBy" value="HTML">
+                    <input type="number" id="rating" name="rating" min="1" max="5" value="0" required>
+                    <button type="submit">Submit</button>
+                </form>
+            </rating-widget>
+
+
         </main>
         <script src="scripts/script.js"></script>
         <script src="scripts/theme.js"></script>
