--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
                 <a href="all_about_me.html" class="tab">ABOUT ME</a>
                 <a href="documents.html" class="tab">LET'S GET PROFESSIONAL</a>
                 <a href="contact.html" class="tab">CONTACT ME</a>
+                <a href="widgets.html" class="tab">WIDGETS</a>
             </h2>
 
             <br>
