--- a/all_about_me.html
+++ b/all_about_me.html
@@ -43,6 +43,7 @@
                     <li><a href="all_about_me.html" class="current_page">ABOUT ME</a></li>
                     <li><a href="documents.html">LET'S GET PROFESSIONAL</a></li>
                     <li><a href="contact.html">CONTACT ME</a></li>
+                    <li><a href="widgets.html">WIDGETS</a></li>
                 </ul>
             </nav>
 
