--- a/documents.html
+++ b/documents.html
@@ -32,6 +32,7 @@
                     <li><a href="all_about_me.html">ABOUT ME</a></li>
                     <li><a href="documents.html" class="current_page">LET'S GET PROFESSIONAL</a></li>
                     <li><a href="contact.html">CONTACT ME</a></li>
+                    <li><a href="widgets.html">WIDGETS</a></li>
                 </ul>
             </nav>
         </header>
