--- a/widgets.html
+++ b/widgets.html
@@ -39,7 +39,7 @@
         <main>
             <rating-widget max="5">
                 <form action="https://httpbin.org/post" method="POST">
-                    <label for="rating">How satisfied are you?</label>
+                    <label id="rating">How satisfied are you?</label>
                     <div class="rating_sys">
                         <input type="radio" id="5star" name="rating" value="5" required>
                         <label for="5star">★</label>
