--- a/widgets.html
+++ b/widgets.html
@@ -58,6 +58,7 @@
                 </form>
             </rating-widget>
 
+            <!--Credits to https://erikflowers.github.io/weather-icons/ for the icons-->
             <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
                 <symbol id="cloudy" viewBox="0 0 30 30">
                     <path d="M3.89,17.6c0-0.99,0.31-1.88,0.93-2.65s1.41-1.27,2.38-1.49c0.26-1.17,0.85-2.14,1.78-2.88c0.93-0.75,2-1.12,3.22-1.12
